--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,6 @@ openpyxl==3.1.2
 et-xmlfile==1.1.0
 gunicorn==21.2.0
 psycopg2-binary==2.9.9
+python-dotenv==1.0.0
+Flask-Migrate==4.0.5
+alembic==1.13.1
