--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,20 @@
 Flask==3.0.2
 Flask-SQLAlchemy==3.1.1
 Flask-Login==0.6.3
-SQLAlchemy==2.0.38
+Flask-Migrate==4.0.5
+alembic==1.13.1
+python-dotenv==1.0.0
+gunicorn==21.2.0
+psycopg2-binary==2.9.9
+openpyxl==3.1.2
+PyJWT==2.8.0
+Werkzeug==3.0.1
+SQLAlchemy==2.0.25
 Jinja2==3.1.5
 MarkupSafe==3.0.2
-Werkzeug==3.0.1
 click==8.1.8
 itsdangerous==2.2.0
 greenlet==3.1.1
 six==1.17.0
 blinker==1.9.0
-openpyxl==3.1.2
 et-xmlfile==1.1.0
-gunicorn==21.2.0
-psycopg2-binary==2.9.9
-python-dotenv==1.0.0
-Flask-Migrate==4.0.5
-alembic==1.13.1
